modules/gdscript/tests/scripts/analyzer/errors/property_function_get_type_error.gd
var _prop: int

# Getter function has wrong return type.
var prop: String:
	get = get_prop

func get_prop():
	return _prop

func test():
	pass
